--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.3",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "scheduler": "^0.23.0",
+    "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.306",
-    "@types/react-dom": "^19.0.4"
+    "@types/react-dom": "^19.0.4",
+    "file-loader": "^6.2.0"
   }
 }
