--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,29 @@
     "description": "Chrome Extension to help you find eco-friendly alternatives to products",
     "version": "1.0",
     "manifest_version": 3,
+    "permissions": ["scripting", "activeTab", "storage"],
     "action": {
-      "default_popup": "index.html"
+      "default_popup": "index.html",
+      "default_icon": {
+        "16": "logo.png",
+        "48": "logo.png",
+        "128": "logo.png"
+      }
     },
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
-        "js": ["contentScript.js"]
+        "matches": [
+          "https://www.amazon.com/*",
+          "https://www.walmart.com/*",
+          "https://www.ebay.com/*",
+          "https://www.target.com/*"
+        ],
+        "js": ["content.js"],
+        "run_at": "document_idle"
       }
     ]
   }
