--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "axios": "^1.7.9",
     "babel-loader": "^9.2.1",
-    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.3",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@types/chrome": "^0.0.306",
     "@types/react-dom": "^19.0.4",
+    "copy-webpack-plugin": "^12.0.2",
+    "dotenv-webpack": "^8.1.0",
     "file-loader": "^6.2.0"
   }
 }
