--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "Chrome Extension to help you find eco-friendly alternatives to products",
     "version": "1.0",
     "manifest_version": 3,
-    "permissions": ["scripting", "activeTab", "storage"],
+    "permissions": ["scripting", "activeTab", "storage", "tabs"],
     "action": {
       "default_popup": "index.html",
       "default_icon": {
